--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Wed, 13 Jan 2021 12:25:11 GMT
+// Generated on Thu, 14 Jan 2021 11:55:00 GMT
 
 $light-color-primary-lighter: 400;
 $light-color-primary-default: 500;
@@ -309,39 +309,39 @@ $button-light-color-primary-color: white;
 $button-light-color-primary-border: #277BB3;
 $button-light-color-primary-background: #338FCC;
 $button-light-color-primary-icon: white;
-$button-light-color-primary-active-border: darken(#277BB3, 5);
-$button-light-color-primary-active-background: darken(#338FCC, 5);
+$button-light-color-primary-states-active-border: darken(#277BB3, 5);
+$button-light-color-primary-states-active-background: darken(#338FCC, 5);
 $button-light-color-second-border: #B3B3B3;
 $button-light-color-second-background: #F0F0F0;
 $button-light-color-second-color: #4D4D4D;
 $button-light-color-second-icon: #999999;
-$button-light-color-second-active-border: darken(#B3B3B3, 5);
-$button-light-color-second-active-background: darken(#F0F0F0, 5);
+$button-light-color-second-states-active-border: darken(#B3B3B3, 5);
+$button-light-color-second-states-active-background: darken(#F0F0F0, 5);
 $button-light-color-error-border: #B3B3B3;
 $button-light-color-error-background: #F0F0F0;
 $button-light-color-error-color: 400;
 $button-light-color-error-icon: #E76E5C;
-$button-light-color-error-active-border: darken(#B3B3B3, 5);
-$button-light-color-error-active-background: darken(#F0F0F0, 5);
+$button-light-color-error-states-active-border: darken(#B3B3B3, 5);
+$button-light-color-error-states-active-background: darken(#F0F0F0, 5);
 $button-dark-color-active-shadow: inset 1px 2px 2px 0 rgba(black, 0.2);
 $button-dark-color-primary-color: white;
 $button-dark-color-primary-border: #277BB3;
 $button-dark-color-primary-background: #338FCC;
 $button-dark-color-primary-icon: white;
-$button-dark-color-primary-active-border: darken(#277BB3, 5);
-$button-dark-color-primary-active-background: 400;
+$button-dark-color-primary-states-active-border: darken(#277BB3, 5);
+$button-dark-color-primary-states-active-background: 400;
 $button-dark-color-second-border: #808080;
 $button-dark-color-second-background: #666666;
 $button-dark-color-second-color: #F0F0F0;
 $button-dark-color-second-icon: #999999;
-$button-dark-color-second-active-border: darken(#808080, 5);
-$button-dark-color-second-active-background: darken(#666666, 5);
+$button-dark-color-second-states-active-border: darken(#808080, 5);
+$button-dark-color-second-states-active-background: darken(#666666, 5);
 $button-dark-color-error-border: #808080;
 $button-dark-color-error-background: #666666;
 $button-dark-color-error-color: 400;
 $button-dark-color-error-icon: #E76E5C;
-$button-dark-color-error-active-border: darken(#808080, 5);
-$button-dark-color-error-active-background: darken(#666666, 5);
+$button-dark-color-error-states-active-border: darken(#808080, 5);
+$button-dark-color-error-states-active-background: darken(#666666, 5);
 $button-size-padding: 5px 15px;
 $button-size-border-width: 1px;
 $button-size-border-radius: 3px;
@@ -390,7 +390,7 @@ $form-field-hint-size-margin-top: 4px;
 $input-size-padding: 5px 16px;
 $input-size-width: 100%;
 $input-size-min-height: 30px;
-$list-size-side-padding: 15px;
+$list-size-horizontal-padding: 15px;
 $list-size-icon-padding: 4px;
 $list-size-item-height: 28px;
 $list-size-two-line-height: 72px;
@@ -414,19 +414,19 @@ $modal-footer-size-border-radius: 0 0 4px 4px;
 $modal-footer-size-padding: 16px;
 $modal-confirm-size-padding: 24px;
 $navbar-light-color-background: #114E77;
-$navbar-light-color-color: #D8EAF7;
+$navbar-light-color-text: #D8EAF7;
 $navbar-light-color-opacity: 0.5;
 $navbar-dark-color-background: #114E77;
-$navbar-dark-color-color: #D8EAF7;
+$navbar-dark-color-text: #D8EAF7;
 $navbar-dark-color-opacity: 0.5;
 $navbar-size-height: 48px;
 $navbar-size-icon-margin-left: 8px;
-$navbar-item-light-color-color: #D8EAF7;
+$navbar-item-light-color-text: #D8EAF7;
 $navbar-item-light-color-states-active: lighten(#206EA2, 5%);
 $navbar-item-light-color-states-hover: lighten(#206EA2, 5%);
 $navbar-item-light-color-states-progress: lighten(#07314D, 5%);
 $navbar-item-light-color-states-disabled-opacity: 0.3;
-$navbar-item-dark-color-color: #D8EAF7;
+$navbar-item-dark-color-text: #D8EAF7;
 $navbar-item-dark-color-states-active: lighten(#114E77, 5%);
 $navbar-item-dark-color-states-hover: lighten(#114E77, 5%);
 $navbar-item-dark-color-states-progress: lighten(#07314D, 15%);
@@ -466,18 +466,18 @@ $progress-bar-size-height: 4px;
 $progress-spinner-size-size: 16px;
 $radio-light-color-outer-circle-border: 300;
 $radio-light-color-inner-circle-border: transparent;
-$radio-light-color-outer-circle-checked-state-border: 500;
-$radio-light-color-outer-circle-focused-state-border: #338FCC;
-$radio-light-color-outer-circle-focused-state-shadow: 300;
-$radio-light-color-inner-circle-checked-state-border: 500;
-$radio-light-color-inner-circle-focused-state-shadow: 0 0 0 1px white;
+$radio-light-color-states-checked-outer-circle-border: 500;
+$radio-light-color-states-checked-inner-circle-border: 500;
+$radio-light-color-states-focused-outer-circle-border: #338FCC;
+$radio-light-color-states-focused-outer-circle-shadow: 300;
+$radio-light-color-states-focused-inner-circle-shadow: 0 0 0 1px white;
 $radio-dark-color-outer-circle-border: 400;
 $radio-dark-color-inner-circle-border: transparent;
-$radio-dark-color-outer-circle-checked-state-border: 400;
-$radio-dark-color-outer-circle-focused-state-border: #57A4D7;
-$radio-dark-color-outer-circle-focused-state-shadow: 0 0 0 2px #57A4D7;
-$radio-dark-color-inner-circle-checked-state-border: #206EA2;
-$radio-dark-color-inner-circle-focused-state-shadow: 0 0 0 1px #333333;
+$radio-dark-color-states-checked-outer-circle-border: 400;
+$radio-dark-color-states-checked-inner-circle-border: #206EA2;
+$radio-dark-color-states-focused-outer-circle-border: #57A4D7;
+$radio-dark-color-states-focused-outer-circle-shadow: 0 0 0 2px #57A4D7;
+$radio-dark-color-states-focused-inner-circle-shadow: 0 0 0 1px #333333;
 $radio-size-size: 14px;
 $radio-size-padding: 24px; // Padding between radio inputs and their labels
 $select-size-height: 30px;
@@ -508,45 +508,45 @@ $tabs-size-border-radius: 3px;
 $tags-light-color-primary-background: #D8EAF7;
 $tags-light-color-primary-border: #D8EAF7;
 $tags-light-color-primary-icon: mix(#57A4D7, rgba(black, 0.05));
-$tags-light-color-primary-icon-hovered: 600;
-$tags-light-color-primary-state-focused: 500;
-$tags-light-color-primary-state-disabled: 500;
-$tags-light-color-primary-state-disabled-background: 500;
+$tags-light-color-primary-states-hovered-icon: 600;
+$tags-light-color-primary-states-focused: 500;
+$tags-light-color-primary-states-disabled-text: 500;
+$tags-light-color-primary-states-disabled-background: 500;
 $tags-light-color-second-background: #E6E6E6;
 $tags-light-color-second-border: #E6E6E6;
 $tags-light-color-second-icon: mix(#999999, rgba(black, 0.05));
-$tags-light-color-second-icon-hovered: 400;
-$tags-light-color-second-state-focused: 500;
-$tags-light-color-second-state-disabled: 300;
-$tags-light-color-second-state-disabled-background: 300;
+$tags-light-color-second-states-hovered-icon: 400;
+$tags-light-color-second-states-focused: 500;
+$tags-light-color-second-states-disabled-text: 300;
+$tags-light-color-second-states-disabled-background: 300;
 $tags-light-color-error-background: #FADEDA;
 $tags-light-color-error-border: #FADEDA;
 $tags-light-color-error-icon: mix(#E76E5C, rgba(black, 0.05));
-$tags-light-color-error-icon-hovered: 500;
-$tags-light-color-error-state-focused: 400;
-$tags-light-color-error-state-disabled: 400;
-$tags-light-color-error-state-disabled-background: 400;
+$tags-light-color-error-states-hovered-icon: 500;
+$tags-light-color-error-states-focused: 400;
+$tags-light-color-error-states-disabled-text: 400;
+$tags-light-color-error-states-disabled-background: 400;
 $tags-dark-color-primary-background: #114E77;
 $tags-dark-color-primary-border: #114E77;
 $tags-dark-color-primary-icon: mix(#57A4D7, rgba(black, 0.05));
-$tags-dark-color-primary-icon-hovered: 500;
-$tags-dark-color-primary-state-focused: 300;
-$tags-dark-color-primary-state-disabled: 400;
-$tags-dark-color-primary-state-disabled-background: 400;
+$tags-dark-color-primary-states-hovered-icon: 500;
+$tags-dark-color-primary-states-focused: 300;
+$tags-dark-color-primary-states-disabled-text: 400;
+$tags-dark-color-primary-states-disabled-background: 400;
 $tags-dark-color-second-background: #4D4D4D;
 $tags-dark-color-second-border: #4D4D4D;
 $tags-dark-color-second-icon: mix(#999999, rgba(black, 0.05));
-$tags-dark-color-second-icon-hovered: 200;
-$tags-dark-color-second-state-focused: 400;
-$tags-dark-color-second-state-disabled: 400;
-$tags-dark-color-second-state-disabled-background: 400;
+$tags-dark-color-second-states-hovered-icon: #E6E6E6;
+$tags-dark-color-second-states-focused: 400;
+$tags-dark-color-second-states-disabled-text: 400;
+$tags-dark-color-second-states-disabled-background: 400;
 $tags-dark-color-error-background: #832112;
 $tags-dark-color-error-border: #832112;
 $tags-dark-color-error-icon: mix(#E76E5C, rgba(black, 0.05));
-$tags-dark-color-error-icon-hovered: 200;
-$tags-dark-color-error-state-focused: 400;
-$tags-dark-color-error-state-disabled: 400;
-$tags-dark-color-error-state-disabled-background: 400;
+$tags-dark-color-error-states-hovered-icon: 200;
+$tags-dark-color-error-states-focused: 400;
+$tags-dark-color-error-states-disabled-text: 400;
+$tags-dark-color-error-states-disabled-background: 400;
 $tags-size-margin: 2px;
 $tags-size-height: 24px;
 $tags-size-border-width: 1px;
@@ -560,15 +560,15 @@ $tag-input-size-margin: 2px 4px;
 $textarea-size-min-height: 50px;
 $textarea-size-padding: 5px 16px;
 $toggle-light-color-border: #B3B3B3;
-$toggle-light-color-background: 100;
+$toggle-light-color-background: linear-gradient(to bottom, #E6E6E6, #F0F0F0);
 $toggle-light-color-circle-border: #B3B3B3;
-$toggle-light-color-circle-background: 100;
-$toggle-light-color-state-focused: 500;
+$toggle-light-color-circle-background: linear-gradient(to bottom, white, #E6E6E6);
+$toggle-light-color-states-focused-shadow: 500;
 $toggle-dark-color-border: #808080;
 $toggle-dark-color-background: #333333;
 $toggle-dark-color-circle-border: #808080;
 $toggle-dark-color-circle-background: white;
-$toggle-dark-color-state-focused: 400;
+$toggle-dark-color-states-focused-shadow: 400;
 $toggle-size-height: 16px;
 $toggle-size-width: 28px;
 $toggle-size-border-radius: 9px;
@@ -577,10 +577,10 @@ $toggle-small-size-height: 14px;
 $toggle-small-size-width: 24px;
 $toggle-small-size-border-radius: 8px;
 $tooltip-light-color-background: #4D4D4D;
-$tooltip-light-color-color: white;
+$tooltip-light-color-text: white;
 $tooltip-light-color-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 $tooltip-dark-color-background: white;
-$tooltip-dark-color-color: white;
+$tooltip-dark-color-text: white;
 $tooltip-dark-color-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 $tooltip-size-max-width: 240px;
 $tooltip-size-min-height: 32px; // 16px for font + 16px for padding = total 32px
@@ -593,17 +593,17 @@ $tree-color-background: #4D4D4D;
 $tree-size-border-width: 2px;
 $tree-size-node-height: 28px;
 $vertical-navbar-light-color-background: #114E77;
-$vertical-navbar-light-color-color: white;
+$vertical-navbar-light-color-text: white;
 $vertical-navbar-light-color-toggle-button: white;
-$vertical-navbar-light-color-state-hovered-background: lighten(#114E77, 5%);
-$vertical-navbar-light-color-state-active-background: lighten(#114E77, 5%);
-$vertical-navbar-light-color-state-progress-background: lighten(#07314D, 15%);
+$vertical-navbar-light-color-states-active-background: lighten(#114E77, 5%);
+$vertical-navbar-light-color-states-hovered-background: lighten(#114E77, 5%);
+$vertical-navbar-light-color-states-progress-background: lighten(#07314D, 15%);
 $vertical-navbar-dark-color-background: #114E77;
-$vertical-navbar-dark-color-color: white;
+$vertical-navbar-dark-color-text: white;
 $vertical-navbar-dark-color-toggle-button: white;
-$vertical-navbar-dark-color-state-hovered-background: lighten(#114E77, 5%);
-$vertical-navbar-dark-color-state-active-background: lighten(#114E77, 5%);
-$vertical-navbar-dark-color-state-progress-background: lighten(#07314D, 15%);
+$vertical-navbar-dark-color-states-active-background: lighten(#114E77, 5%);
+$vertical-navbar-dark-color-states-hovered-background: lighten(#114E77, 5%);
+$vertical-navbar-dark-color-states-progress-background: lighten(#07314D, 15%);
 $vertical-navbar-item-size-height: 64px;
 $vertical-navbar-item-size-margin: 1px 0;
 $vertical-navbar-item-size-padding-horizontal: 16px;
