fixed base color tokens

--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 14 Jan 2021 11:55:00 GMT
+// Generated on Thu, 14 Jan 2021 12:43:58 GMT
 
 $light-color-primary-lighter: 400;
 $light-color-primary-default: 500;
@@ -319,7 +319,7 @@ $button-light-color-second-states-active-border: darken(#B3B3B3, 5);
 $button-light-color-second-states-active-background: darken(#F0F0F0, 5);
 $button-light-color-error-border: #B3B3B3;
 $button-light-color-error-background: #F0F0F0;
-$button-light-color-error-color: 400;
+$button-light-color-error-color: #E76E5C;
 $button-light-color-error-icon: #E76E5C;
 $button-light-color-error-states-active-border: darken(#B3B3B3, 5);
 $button-light-color-error-states-active-background: darken(#F0F0F0, 5);
@@ -329,7 +329,7 @@ $button-dark-color-primary-border: #277BB3;
 $button-dark-color-primary-background: #338FCC;
 $button-dark-color-primary-icon: white;
 $button-dark-color-primary-states-active-border: darken(#277BB3, 5);
-$button-dark-color-primary-states-active-background: 400;
+$button-dark-color-primary-states-active-background: darken(#57A4D7, 5);
 $button-dark-color-second-border: #808080;
 $button-dark-color-second-background: #666666;
 $button-dark-color-second-color: #F0F0F0;
@@ -338,7 +338,7 @@ $button-dark-color-second-states-active-border: darken(#808080, 5);
 $button-dark-color-second-states-active-background: darken(#666666, 5);
 $button-dark-color-error-border: #808080;
 $button-dark-color-error-background: #666666;
-$button-dark-color-error-color: 400;
+$button-dark-color-error-color: #E76E5C;
 $button-dark-color-error-icon: #E76E5C;
 $button-dark-color-error-states-active-border: darken(#808080, 5);
 $button-dark-color-error-states-active-background: darken(#666666, 5);
@@ -350,16 +350,16 @@ $icon-button-size-border-radius: 3px;
 $icon-button-size-padding: 5px 7px;
 $icon-button-size-text-padding: 5px 7px;
 $icon-button-size-icon-padding: 5px 15px;
-$checkbox-light-color-border: 300;
-$checkbox-light-color-states-checked-border: 600;
-$checkbox-light-color-states-checked-background: 500;
-$checkbox-light-color-states-focused-border: 600;
-$checkbox-light-color-states-focused-shadow: 600;
-$checkbox-dark-color-border: 400;
-$checkbox-dark-color-states-checked-border: 300;
+$checkbox-light-color-border: #B3B3B3;
+$checkbox-light-color-states-checked-border: #206EA2;
+$checkbox-light-color-states-checked-background: #338FCC;
+$checkbox-light-color-states-focused-border: #206EA2;
+$checkbox-light-color-states-focused-shadow: inset 0 0 0 1px white, 0 0 0 1px #206EA2;
+$checkbox-dark-color-border: #999999;
+$checkbox-dark-color-states-checked-border: #57A4D7;
 $checkbox-dark-color-states-checked-background: #206EA2;
-$checkbox-dark-color-states-focused-border: 400;
-$checkbox-dark-color-states-focused-shadow: 400;
+$checkbox-dark-color-states-focused-border: #57A4D7;
+$checkbox-dark-color-states-focused-shadow: inset 0 0 0 1px #333333, 0 0 0 1px #57A4D7;
 $checkbox-size-width: 16px;
 $checkbox-size-padding: 24px;
 $checkbox-size-border-width: 1px;
@@ -451,12 +451,12 @@ $popover-header-size-padding: 10px 16px;
 $popover-footer-size-padding: 12px 16px;
 $popover-footer-size-margin-top: 8px;
 $popup-light-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
-$popup-light-color-border: 300;
+$popup-light-color-border: #B3B3B3;
 $popup-light-color-divider: #CCCCCC;
 $popup-light-color-background: white;
 $popup-light-color-footer-background: #F0F0F0;
 $popup-dark-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
-$popup-dark-color-border: 400;
+$popup-dark-color-border: #999999;
 $popup-dark-color-divider: #666666;
 $popup-dark-color-background: #4D4D4D;
 $popup-dark-color-footer-background: transparent;
@@ -464,16 +464,16 @@ $progress-bar-light-color-background: #F0F0F0;
 $progress-bar-dark-color-background: #666666;
 $progress-bar-size-height: 4px;
 $progress-spinner-size-size: 16px;
-$radio-light-color-outer-circle-border: 300;
+$radio-light-color-outer-circle-border: #B3B3B3;
 $radio-light-color-inner-circle-border: transparent;
-$radio-light-color-states-checked-outer-circle-border: 500;
-$radio-light-color-states-checked-inner-circle-border: 500;
+$radio-light-color-states-checked-outer-circle-border: #338FCC;
+$radio-light-color-states-checked-inner-circle-border: #338FCC;
 $radio-light-color-states-focused-outer-circle-border: #338FCC;
-$radio-light-color-states-focused-outer-circle-shadow: 300;
+$radio-light-color-states-focused-outer-circle-shadow: 0 0 0 2px #B3B3B3;
 $radio-light-color-states-focused-inner-circle-shadow: 0 0 0 1px white;
-$radio-dark-color-outer-circle-border: 400;
+$radio-dark-color-outer-circle-border: #999999;
 $radio-dark-color-inner-circle-border: transparent;
-$radio-dark-color-states-checked-outer-circle-border: 400;
+$radio-dark-color-states-checked-outer-circle-border: #57A4D7;
 $radio-dark-color-states-checked-inner-circle-border: #206EA2;
 $radio-dark-color-states-focused-outer-circle-border: #57A4D7;
 $radio-dark-color-states-focused-outer-circle-shadow: 0 0 0 2px #57A4D7;
@@ -497,9 +497,9 @@ $table-size-border-width: 1px;
 $table-size-row-padding-vertical: 8px;
 $table-size-row-padding-horizontal: 16px;
 $tabs-light-color-border: #B3B3B3;
-$tabs-light-color-state-active: 500;
+$tabs-light-color-state-active: #338FCC;
 $tabs-dark-color-border: #B3B3B3;
-$tabs-dark-color-state-active: 400;
+$tabs-dark-color-state-active: #57A4D7;
 $tabs-size-height: 40px;
 $tabs-size-highlight-height: 4px;
 $tabs-size-padding-horizontal: 16px;
@@ -508,45 +508,45 @@ $tabs-size-border-radius: 3px;
 $tags-light-color-primary-background: #D8EAF7;
 $tags-light-color-primary-border: #D8EAF7;
 $tags-light-color-primary-icon: mix(#57A4D7, rgba(black, 0.05));
-$tags-light-color-primary-states-hovered-icon: 600;
-$tags-light-color-primary-states-focused: 500;
-$tags-light-color-primary-states-disabled-text: 500;
-$tags-light-color-primary-states-disabled-background: 500;
+$tags-light-color-primary-states-hovered-icon: #206EA2;
+$tags-light-color-primary-states-focused: #338FCC;
+$tags-light-color-primary-states-disabled-text: mix(#338FCC, transparent, 50%);
+$tags-light-color-primary-states-disabled-background: mix(#338FCC, transparent, 10%);
 $tags-light-color-second-background: #E6E6E6;
 $tags-light-color-second-border: #E6E6E6;
 $tags-light-color-second-icon: mix(#999999, rgba(black, 0.05));
-$tags-light-color-second-states-hovered-icon: 400;
-$tags-light-color-second-states-focused: 500;
-$tags-light-color-second-states-disabled-text: 300;
-$tags-light-color-second-states-disabled-background: 300;
+$tags-light-color-second-states-hovered-icon: #999999;
+$tags-light-color-second-states-focused: #338FCC;
+$tags-light-color-second-states-disabled-text: mix(#B3B3B3, transparent, 50%);
+$tags-light-color-second-states-disabled-background: mix(#B3B3B3, transparent, 10%);
 $tags-light-color-error-background: #FADEDA;
 $tags-light-color-error-border: #FADEDA;
 $tags-light-color-error-icon: mix(#E76E5C, rgba(black, 0.05));
-$tags-light-color-error-states-hovered-icon: 500;
-$tags-light-color-error-states-focused: 400;
-$tags-light-color-error-states-disabled-text: 400;
-$tags-light-color-error-states-disabled-background: 400;
+$tags-light-color-error-states-hovered-icon: #E04D36;
+$tags-light-color-error-states-focused: #E76E5C;
+$tags-light-color-error-states-disabled-text: mix(#E76E5C, transparent, 50%);
+$tags-light-color-error-states-disabled-background: mix(#E76E5C, transparent, 10%);
 $tags-dark-color-primary-background: #114E77;
 $tags-dark-color-primary-border: #114E77;
 $tags-dark-color-primary-icon: mix(#57A4D7, rgba(black, 0.05));
-$tags-dark-color-primary-states-hovered-icon: 500;
-$tags-dark-color-primary-states-focused: 300;
-$tags-dark-color-primary-states-disabled-text: 400;
-$tags-dark-color-primary-states-disabled-background: 400;
+$tags-dark-color-primary-states-hovered-icon: #338FCC;
+$tags-dark-color-primary-states-focused: #57A4D7;
+$tags-dark-color-primary-states-disabled-text: mix(#57A4D7, transparent, 50%);
+$tags-dark-color-primary-states-disabled-background: mix(#57A4D7, transparent, 10%);
 $tags-dark-color-second-background: #4D4D4D;
 $tags-dark-color-second-border: #4D4D4D;
 $tags-dark-color-second-icon: mix(#999999, rgba(black, 0.05));
 $tags-dark-color-second-states-hovered-icon: #E6E6E6;
-$tags-dark-color-second-states-focused: 400;
-$tags-dark-color-second-states-disabled-text: 400;
-$tags-dark-color-second-states-disabled-background: 400;
+$tags-dark-color-second-states-focused: #57A4D7;
+$tags-dark-color-second-states-disabled-text: mix(#999999, transparent, 50%);
+$tags-dark-color-second-states-disabled-background: mix(#999999, transparent, 10%);
 $tags-dark-color-error-background: #832112;
 $tags-dark-color-error-border: #832112;
 $tags-dark-color-error-icon: mix(#E76E5C, rgba(black, 0.05));
-$tags-dark-color-error-states-hovered-icon: 200;
-$tags-dark-color-error-states-focused: 400;
-$tags-dark-color-error-states-disabled-text: 400;
-$tags-dark-color-error-states-disabled-background: 400;
+$tags-dark-color-error-states-hovered-icon: #F4B7AE;
+$tags-dark-color-error-states-focused: #E76E5C;
+$tags-dark-color-error-states-disabled-text: mix(#E76E5C, transparent, 50%);
+$tags-dark-color-error-states-disabled-background: mix(#E76E5C, transparent, 10%);
 $tags-size-margin: 2px;
 $tags-size-height: 24px;
 $tags-size-border-width: 1px;
@@ -563,12 +563,12 @@ $toggle-light-color-border: #B3B3B3;
 $toggle-light-color-background: linear-gradient(to bottom, #E6E6E6, #F0F0F0);
 $toggle-light-color-circle-border: #B3B3B3;
 $toggle-light-color-circle-background: linear-gradient(to bottom, white, #E6E6E6);
-$toggle-light-color-states-focused-shadow: 500;
+$toggle-light-color-states-focused-shadow: inset 0 0 0 1px white, 0 0 0 2px #338FCC;
 $toggle-dark-color-border: #808080;
 $toggle-dark-color-background: #333333;
 $toggle-dark-color-circle-border: #808080;
 $toggle-dark-color-circle-background: white;
-$toggle-dark-color-states-focused-shadow: 400;
+$toggle-dark-color-states-focused-shadow: inset 0 0 0 1px #333333, 0 0 0 2px #57A4D7;
 $toggle-size-height: 16px;
 $toggle-size-width: 28px;
 $toggle-size-border-radius: 9px;
