--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 14 Jan 2021 13:16:01 GMT
+// Generated on Fri, 15 Jan 2021 06:45:06 GMT
 
 $light-color-primary-lighter: 400;
 $light-color-primary-default: 500;
@@ -200,6 +200,11 @@ $palette-yellow-contrast-600: white;
 $palette-yellow-contrast-700: white;
 $palette-yellow-contrast-800: white;
 $palette-yellow-contrast-a-100: #4D4D4D;
+$color-palette-blue: [object Object];
+$color-palette-green: [object Object];
+$color-palette-red: [object Object];
+$color-palette-grey: [object Object];
+$color-palette-yellow: [object Object];
 $typography-display-1-font-size: 56px;
 $typography-display-1-line-height: 76px;
 $typography-display-1-letter-spacing: -0.4px;
